--- a/.gitignore
+++ b/.gitignore
@@ -293,7 +293,7 @@ poetry.toml
 pyrightconfig.json
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode
 # !.vscode/settings.json
 # !.vscode/tasks.json
 # !.vscode/launch.json
