--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.3.2
 Flask-SQLAlchemy==3.0.5
 Flask-Migrate==4.0.4
 Flask-WTF==1.1.1
-Flask-Login==0.6.2
+# Flask-Login==0.6.2
 Flask-Moment==1.0.5
 python-dotenv==1.0.0
 email-validator==2.0.0.post2
